# Buchgenerator

./: .gitignore  README.md  buchgenerator.py  ingest.py  pyproject.toml  requirements.txt  ui.py
app/: chat_service.py  chunking.py  config.py  history.py  mcp_client.py  vector_pipeline.py  vector_store.py
buchgenerator/: __init__.py  cli.py  generator.py
tests/: test_chunking.py  test_generator.py  test_history.py
