[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buchgenerator"
version = "0.1.0"
description = "Ein einfacher Buchgenerator in Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Buchgenerator"}]
dependencies = []

[project.scripts]
buchgenerator = "buchgenerator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
